--- a/pull.html
+++ b/pull.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
+    <link rel="icon" type="image/x-icon" href="img/0_icons/coin_meowth.png" />
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="img/0_icons/hisui_pokeball.png"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+      rel="stylesheet"
     />
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/pull.js"></script>
@@ -22,51 +22,65 @@
   <body>
     <span id="bgSpan"></span>
     <iframe src="about:blank" name="_iframe"></iframe>
-    <span id="statusSpan" class="hidestatus"></span>
-    <div class="header pull-header">
-      <span>
-        <button
-          id="homeButton"
-          onclick="location.href='index.html';"
-          class="link"
-        >
-          <img src="img/0_icons/pokeball_coin.png" class="icon" /> Binder
-        </button>
 
-        <button id="syncButton">
-          <img src="img/0_icons/yamper_coin.png" class="icon" />
-          Fetch
-        </button>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">
+            <span class="link-text">Binder</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="pullOneButton">
+            <span class="link-text">Pull 1</span>
+          </a>
+        </li>
+        <li class="nav-item mobileHide">
+          <a href="#" class="nav-link" id="pullFiveButton">
+            <span class="link-text">Pull 5</span>
+          </a>
+        </li>
+        <li class="nav-item mobileHide">
+          <a href="#" class="nav-link" id="pullTenButton">
+            <span class="link-text">Pull 10</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="clearDisplayButton">
+            <span class="link-text">Clear</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="syncButton">
+            <span class="link-text">Sync</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-        <button id="toggleHeaderBtn">
-          <img src="img/0_icons/kecleon.png" class="icon" />
-        </button>
-      </span>
-
-      <span id="binderSpan">
-        <button>
-          Binder:
-          <select id="binderDropdown"></select>
-        </button>
-      </span>
-
-      <span id="progressSpan"><progress>text</progress></span>
-
-      <span id="pullSpan">
-        <button id="pullOneButton">1️⃣</button>
-        <button id="pullFiveButton">5️⃣</button>
-        <button id="pullTenButton">🔟</button>
-        <button id="clearDisplayButton">Clear display</button>
-      </span>
-    </div>
-
-    <div id="parent">
-      <span id="largeCardSpan"></span>
-      <span id="smallCardSpan"></span>
-      <span id="listSpan"> <ol reversed id="cardList"></ol></span>
-    </div>
-    <form id="form" method="POST" target="_iframe">
-      <input type="text" id="filenamesInput" name="filenames" readonly />
-    </form>
+    <main>
+      <span id="statusSpan" class="hide"></span>
+      <div id="parent">
+        <span id="largeCardSpan"></span>
+        <span id="right">
+          <span id="binderSpan">
+            Binder:
+            <select id="binderDropdown"></select>
+          </span>
+          <hr />
+          <span id="progressSpan"> <progress></progress> </span>
+          <hr />
+          <span id="lists">
+            <span id="smallCardSpan"></span>
+            <span id="listSpan">
+              <ol reversed id="cardList"></ol>
+            </span>
+          </span>
+        </span>
+      </div>
+      <form id="form" method="POST" target="_iframe">
+        <input type="text" id="filenamesInput" name="filenames" readonly />
+      </form>
+    </main>
   </body>
 </html>
