randomize default set and binder

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <ul class="dropdown-container" id="sort-dropdown">
             <li>
               <select id="sortDropdown">
-                <option value="Pokemon Type">Pokemon Type</option>
+                <option value="Energy Type">Energy Type</option>
                 <option value="Dex #">Dex #</option>
                 <option value="Set Number">Set Number</option>
                 <option value="Card Type">Card Type</option>
