--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="display-btn">
-            <span class="link-text">Display</span>
+            <span class="link-text">Cards</span>
           </a>
           <ul class="dropdown-container" id="display-dropdown">
             <li>
