--- a/pull.html
+++ b/pull.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
     <link rel="icon" type="image/x-icon" href="img/0_icons/coin_meowth.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <script type="module" src="js/app.js"></script>
@@ -29,6 +31,25 @@
           <a href="index.html" class="nav-link">
             <span class="link-text">Binder</span>
           </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="display-btn">
+            <span class="link-text">Card Pool</span>
+          </a>
+          <ul class="dropdown-container" id="display-dropdown">
+            <li>
+              <a href="#" class="dropdown-item">
+                Binder
+                <select id="binderDropdown"></select
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="dropdown-item">
+                Set
+                <select id="setDropdown"></select
+              ></a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="pullOneButton">
@@ -63,11 +84,6 @@
       <div id="parent">
         <span id="largeCardSpan"></span>
         <span id="right">
-          <span id="binderSpan">
-            Binder:
-            <select id="binderDropdown"></select>
-          </span>
-          <hr />
           <span id="progressSpan"> <progress></progress> </span>
           <hr />
           <span id="lists">
