--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
           </ul>
         </li>
         <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span class="link-text"
+              ><input id="toggle-borders" type="checkbox" /> Borders</span
+            >
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="syncButton">
             <span class="link-text">Sync</span>
           </a>
