border tweaks, make fills dark again

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a href="pull.html" class="nav-link">
-            <span class="link-text">Pull cards</span>
+            <span class="link-text">→ Gacha</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="display-btn">
-            <span class="link-text">Cards</span>
+            <span class="link-text">Binder/Set</span>
           </a>
           <ul class="dropdown-container" id="display-dropdown">
             <li>
