--- a/pull.html
+++ b/pull.html
@@ -29,12 +29,12 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a href="index.html" class="nav-link">
-            <span class="link-text">Binder</span>
+            <span class="link-text">→ Binder</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="display-btn">
-            <span class="link-text">Card Pool</span>
+            <span class="link-text">Binder/Set</span>
           </a>
           <ul class="dropdown-container" id="display-dropdown">
             <li>
