--- a/pull.html
+++ b/pull.html
@@ -49,6 +49,11 @@
                 <select id="setDropdown"></select
               ></a>
             </li>
+            <li>
+              <a href="#" class="dropdown-item">
+                <span id="progressSpan"> <progress></progress> </span
+              ></a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
@@ -84,8 +89,6 @@
       <div id="parent">
         <span id="largeCardSpan"></span>
         <span id="right">
-          <span id="progressSpan"> <progress></progress> </span>
-          <hr />
           <span id="lists">
             <span id="smallCardSpan"></span>
             <span id="listSpan">
