click to zoom in binder view

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </nav>
     <main>
       <span id="statusSpan" class="hide"></span>
+      <span id="zoom-span" class="zoom"></span>
       <div id="contentDiv" class="contentDiv"></div>
     </main>
   </body>
