delete vanilla JS files

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="js/app.js"></script>
-    <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/sort.js"></script>
-    <script type="module" src="js/ui.js"></script>
-    <script type="module" src="js/page.js"></script>
-    <script type="module" src="js/store.js"></script>
-    <script type="module" src="js/constants.js"></script>
+    <script type="module" src="built/app.js"></script>
+    <script type="module" src="built/index.js"></script>
+    <script type="module" src="built/sort.js"></script>
+    <script type="module" src="built/ui.js"></script>
+    <script type="module" src="built/page.js"></script>
+    <script type="module" src="built/store.js"></script>
+    <script type="module" src="built/constants.js"></script>
 
     <title>Card Binder</title>
   </head>
