rename container, xyname, xynames → collection, activeXy, allXyNames

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="display-btn">
-            <span class="link-text">Binder/Set</span>
+            <span class="link-text">Collection</span>
           </a>
           <ul class="dropdown-container" id="display-dropdown">
             <li>
