get set IDs from tcg api instead of sheets. + some refactoring

--- a/pull.html
+++ b/pull.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="built/app.js"></script>
+    <script type="module" src="built/api_clients.js"></script>
     <script type="module" src="built/pull.js"></script>
     <script type="module" src="built/constants.js"></script>
     <script type="module" src="built/ui.js"></script>
@@ -46,7 +46,7 @@
             <li>
               <a href="#" class="dropdown-item">
                 Set
-                <select id="setDropdown"></select
+                <select id="set-dropdown"></select
               ></a>
             </li>
             <li>
