--- a/v2-pull.html
+++ b/v2-pull.html
@@ -11,73 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="built/v2-app.js"></script>
-    <script type="module" src="built/v2-pull.js"></script>
-    <script type="module" src="built/v2-constants.js"></script>
-    <script type="module" src="built/v2-ui.js"></script>
-    <script type="module" src="built/v2-page.js"></script>
-    <script type="module" src="built/v2-store.js"></script>
-    <script type="module" src="built/v2-sort.js"></script>
 
-    <title>Pull card remotely</title>
+    <title>Pull cards v2</title>
   </head>
   <body>
-    <span id="bgSpan"></span>
-    <iframe src="about:blank" name="_iframe"></iframe>
+    <span id="bg-span"></span>
 
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="v2-index.html" class="nav-link">
-            <span class="link-text">→ Binder</span>
+          <a href="#" class="nav-link" id="clear-storage-button">
+            <span class="link-text">Clear LS</span>
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link" id="display-btn">
-            <span class="link-text">Collection</span>
-          </a>
-          <ul class="dropdown-container" id="display-dropdown">
-            <li>
-              <a href="#" class="dropdown-item">
-                Binder
-                <select id="binderDropdown"></select
-              ></a>
-            </li>
-            <li>
-              <a href="#" class="dropdown-item">
-                Set
-                <select id="setDropdown"></select
-              ></a>
-            </li>
-            <li>
-              <a href="#" class="dropdown-item">
-                <span id="progressSpan"> <progress></progress> </span
-              ></a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link" id="pullOneButton">
-            <span class="link-text">Pull 1</span>
-          </a>
-        </li>
-        <li class="nav-item mobileHide">
-          <a href="#" class="nav-link" id="pullFiveButton">
-            <span class="link-text">Pull 5</span>
-          </a>
-        </li>
-        <li class="nav-item mobileHide">
-          <a href="#" class="nav-link" id="pullTenButton">
-            <span class="link-text">Pull 10</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link" id="clearDisplayButton">
-            <span class="link-text">Clear</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link" id="syncButton">
+          <a href="#" class="nav-link" id="sync-button">
             <span class="link-text">Sync</span>
           </a>
         </li>
@@ -85,21 +33,32 @@
     </nav>
 
     <main>
-      <span id="statusSpan" class="hide"></span>
+      <span id="status-span" class="hide"></span>
       <div id="parent">
-        <span id="largeCardSpan"></span>
+        <span id="large-card-span"></span>
         <span id="right">
           <span id="lists">
-            <span id="smallCardSpan"></span>
-            <span id="listSpan">
-              <ol reversed id="cardList"></ol>
+            <span id="small-card-span"></span>
+            <span id="list-span">
+              <ol reversed id="card-list"></ol>
             </span>
           </span>
         </span>
       </div>
-      <form id="form" method="POST" target="_iframe">
-        <input type="text" id="filenamesInput" name="filenames" readonly />
-      </form>
     </main>
+
+    <script defer type="text/javascript" src="v2-secrets.js"></script>
+    <script defer type="text/javascript" src="v2-gapi-init.js"></script>
+    <script defer type="text/javascript" src="v2-gapi-fetch.js"></script>
+    <script
+      defer
+      src="https://apis.google.com/js/api.js"
+      onload="gapiLoaded()"
+    ></script>
+    <script
+      defer
+      src="https://accounts.google.com/gsi/client"
+      onload="gisLoaded()"
+    ></script>
   </body>
 </html>
