--- a/v2-pull.html
+++ b/v2-pull.html
@@ -20,6 +20,13 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span class="link-text">
+              <select id="set-dropdown"></select>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="clear-storage-button">
             <span class="link-text">Clear LS</span>
           </a>
