--- a/v2-pull.html
+++ b/v2-pull.html
@@ -27,6 +27,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="#" class="nav-link" id="open-pack">
+            <span class="link-text">Open pack</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="clear-storage-button">
             <span class="link-text">Clear LS</span>
           </a>
