--- a/v2-pull.html
+++ b/v2-pull.html
@@ -32,6 +32,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="#" class="nav-link" id="clear-display-button">
+            <span class="link-text">Clear UI</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="clear-storage-button">
             <span class="link-text">Clear LS</span>
           </a>
