--- a/v2-pull.html
+++ b/v2-pull.html
@@ -20,6 +20,11 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a href="v2-index.html" class="nav-link">
+            <span class="link-text">→ Binder</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link">
             <span class="link-text">
               <select id="set-dropdown"></select>
