--- a/v2-index.html
+++ b/v2-index.html
@@ -94,13 +94,13 @@
             </li>
           </ul>
         </li> -->
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a href="#" class="nav-link">
             <span class="link-text"
               ><input id="toggle-borders" type="checkbox" /> Borders</span
             >
           </a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="clear-storage-button">
             <span class="link-text">Clear LS</span>
