install localbase library

--- a/v2-pull.html
+++ b/v2-pull.html
@@ -68,7 +68,7 @@
         </span>
       </div>
     </main>
-
+    <script src="https://unpkg.com/localbase/dist/localbase.dev.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-secrets.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-init.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-sheets.js"></script>
