--- a/v2-pull.html
+++ b/v2-pull.html
@@ -51,6 +51,11 @@
             <span class="link-text">Sync</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="debug-button">
+            <span class="link-text">Debug</span>
+          </a>
+        </li>
       </ul>
     </nav>
 
