update binder view

--- a/v2-index.html
+++ b/v2-index.html
@@ -118,7 +118,7 @@
       <span id="zoom-span" class="zoom"></span>
       <div id="content-div" class="content-div"></div>
     </main>
-
+    <script src="https://unpkg.com/localbase/dist/localbase.dev.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-secrets.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-init.js"></script>
     <script defer type="text/javascript" src="v2-api-gapi-sheets.js"></script>
