set grid and size

--- a/v2-index.html
+++ b/v2-index.html
@@ -48,7 +48,7 @@
             </li>
           </ul>
         </li>  -->
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a href="#" class="nav-link" id="grid-btn">
             <span class="link-text">Grid</span>
           </a>
@@ -66,8 +66,8 @@
               ></a>
             </li>
           </ul>
-        </li> -->
-        <!-- <li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="size-btn">
             <span class="link-text">Card size</span>
           </a>
@@ -76,7 +76,7 @@
               <select id="size-dropdown" size="5"></select>
             </li>
           </ul>
-        </li> -->
+        </li>
         <!-- <li class="nav-item">
           <a href="#" class="nav-link" id="sort-btn">
             <span class="link-text">Sort</span>
