add sorting + small consistency fixes

--- a/v2-index.html
+++ b/v2-index.html
@@ -77,7 +77,7 @@
             </li>
           </ul>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a href="#" class="nav-link" id="sort-btn">
             <span class="link-text">Sort</span>
           </a>
@@ -88,12 +88,12 @@
                 <option value="Dex #">Dex #</option>
                 <option value="Set Number">Set Number</option>
                 <option value="Card Type">Card Type</option>
-                <option value="Visuals">Visuals</option>
+                <option value="Rarity">Rarity</option>
                 <option value="recent">Recent</option>
               </select>
             </li>
           </ul>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a href="#" class="nav-link">
             <span class="link-text"
