--- a/v2-pull.html
+++ b/v2-pull.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="v2-index.html" class="nav-link">
+          <a href="v2-binder.html" class="nav-link">
             <span class="link-text">→ Binder</span>
           </a>
         </li>
