fix up moving errors

--- a/v2-pull.html
+++ b/v2-pull.html
@@ -38,22 +38,17 @@
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="clear-display-button">
-            <span class="link-text">Clear UI</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link" id="clear-storage-button">
-            <span class="link-text">Clear LS</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link" id="sync-button">
-            <span class="link-text">Sync</span>
+            <span class="link-text">Clean up</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link" id="debug-button">
             <span class="link-text">Debug</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="v2-index.html" class="nav-link">
+            <span class="link-text">⚙️</span>
           </a>
         </li>
       </ul>
