--- a/v2-binder.html
+++ b/v2-binder.html
@@ -102,13 +102,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link" id="clear-storage-button">
-            <span class="link-text">Clear LS</span>
+          <a href="#" class="nav-link" id="debug-button">
+            <span class="link-text">Debug</span>
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link" id="sync-button">
-            <span class="link-text">Sync</span>
+          <a href="v2-index.html" class="nav-link">
+            <span class="link-text">⚙️</span>
           </a>
         </li>
       </ul>
