remove v2 since v1 stopped working anyway

--- a/binder.html
+++ b/binder.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="v2-css.css" />
+    <link rel="stylesheet" href="css.css" />
     <link rel="icon" type="image/x-icon" href="img/0_icons/coin_meowth.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="v2-pull.html" class="nav-link">
+          <a href="pull.html" class="nav-link">
             <span class="link-text">→ Packs</span>
           </a>
         </li>
@@ -107,7 +107,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="v2-index.html" class="nav-link">
+          <a href="index.html" class="nav-link">
             <span class="link-text">⚙️</span>
           </a>
         </li>
@@ -119,9 +119,9 @@
       <div id="content-div" class="content-div"></div>
     </main>
     <script src="https://unpkg.com/localbase/dist/localbase.dev.js"></script>
-    <script defer type="text/javascript" src="v2-api-gapi-secrets.js"></script>
-    <script defer type="text/javascript" src="v2-api-gapi-init.js"></script>
-    <script defer type="text/javascript" src="v2-api-gapi-sheets.js"></script>
+    <script defer type="text/javascript" src="api-gapi-secrets.js"></script>
+    <script defer type="text/javascript" src="api-gapi-init.js"></script>
+    <script defer type="text/javascript" src="api-gapi-sheets.js"></script>
     <script
       defer
       src="https://apis.google.com/js/api.js"
