--- a/binder.html
+++ b/binder.html
@@ -30,6 +30,13 @@
             </span>
           </a>
         </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span class="link-text">
+              <span id="progress-bar"></span>
+            </span>
+          </a>
+        </li>
         <!-- <li class="nav-item">
           <a href="#" class="nav-link" id="display-btn">
             <span class="link-text">Filter</span>
