--- a/pull.html
+++ b/pull.html
@@ -32,6 +32,13 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span class="link-text">
+              <span id="progress-bar"></span>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#" class="nav-link" id="open-pack">
             <span class="link-text">Open pack</span>
           </a>
